--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-listado></app-listado>
 <app-heroe> </app-heroe> -->
 
-<app-contador></app-contador>
+<!-- <app-contador></app-contador> -->
+<app-main-page></app-main-page>
