--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -3,15 +3,7 @@
 
 <div class="row">
     <div class="col">
-    <h3>personajes</h3>
-    <hr>
-    <ul>
-    
-        <li *ngFor="let personaje of personajes; let i =index">
-            {{i + 1}} - {{personaje.nombre}} - {{personaje.poder}}
-        </li> 
-
-    </ul>
+    <app-personajes [personajes]="personajes"></app-personajes>
 </div>
     <div class="col">
     <h3>Agregar - {{nuevo.nombre}}</h3>
